--- a/src/pages/store.css
+++ b/src/pages/store.css
@@ -1,9 +1,10 @@
 .ItemContainer{
-    border: 1px solid black;
+  overflow: scroll;
+    border: 1px solid rgb(235, 33, 33);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    grid-auto-rows: minmax(100px, auto);
+    /* grid-auto-rows: minmax(100px, auto); */
     width: 90vw;
     height: 80vh;
     /* margin-left: 5vw;
