this commit adds styling

--- a/src/components/SignIn/sign-in.css
+++ b/src/components/SignIn/sign-in.css
@@ -1,7 +1,39 @@
-.containerSignIn
-{
-    background-color: aqua;
-}
 .containerSignIn{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
     border: 1px solid black;
+    width: 35vw;
+    height: 40vh;
+    border-radius: 10px;
+    background-color: aliceblue ;
+}
+#signIn{
+    font-size: xx-large;
+}
+input{
+    width: 95%;
+    padding: 16px 8px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    }
+#signInButton{
+    display: inline-block;
+    padding: .75rem 1.25rem;
+    border-radius: 10rem;
+    color: rgb(10, 0, 0);
+    text-transform: uppercase;
+    font-size: 1rem;
+    letter-spacing: .15rem;
+    transition: all .3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    width: 50%
+
+  
 }
