--- a/src/components/Store/items.css
+++ b/src/components/Store/items.css
@@ -1,20 +1,26 @@
 #item{
     border: 1px solid rgb(63, 6, 247);
     height: 50vh;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
 }
 h1{
     font-size: medium;
 }
 img{
     width: 60%;
-    height: 60%
+    height: 200%
     
    
 }
-#priceAndBuy{
+button{
+    border: 1px solid black;
+    width: 100%
+}
+/* #priceAndBuy{
     display: flex;
     width: 100%;
     justify-content: space-around;
     align-items: space-around;
-/* background-color: blanchedalmond; */
-}
+} */
