--- a/src/pages/store.css
+++ b/src/pages/store.css
@@ -2,7 +2,7 @@
   overflow: scroll;
     border: 1px solid rgb(235, 33, 33);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 10px;
     /* grid-auto-rows: minmax(100px, auto); */
     width: 90vw;
@@ -11,14 +11,23 @@
     padding-top: 20vh; */
     
     background-color: rgb(255, 255, 255);
+    
 
 }
 #storediv{
-    background-color: aquamarine;
+    /* background-color: rgb(209, 194, 174); */
+    background-color: aliceblue ;
+    
     display: flex;
   justify-content: center;
   align-items: center;
     width: 100vw;
     height: 90vh;
     margin-top: 0;
+
 }
+/* #content{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+} */
